adguard-home/adguard-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: adguard
    meta.helm.sh/release-namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
  name: adguard
  namespace: adguard 
spec:
  ingressClassName: nginx
  rules:
  - host: adguard.kitties.dev
    http:
      paths:
      - backend:
          service:
            name: adguard-service 
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - adguard.kitties.dev
    secretName: adguard-tls
